feat: detail modal added (#26)
* feat: detail page added

* feat: detail modal added

* fix: detail page removed

* feat: presale status added

* style: run format

* fix: connect btn fixed

* fix: typo fixed

* fix(Originals): typo fixed

* fix: font-weight fixed

--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,25 @@ h3 {
   left: 0;
   z-index: 1030;
 }
-.connected-button {
+.connect-btn-home {
   border: 1.5px solid #ffe1bc;
   background-color: #ff8437;
   font-weight: 600;
   text-align: center !important;
+  padding: 8px 20px;
 }
-.connected-button:hover {
+.connect-btn-home:hover {
   color: white !important;
+  background-color: transparent;
+}
+.connect-btn{
+  border: 1.5px solid #1095F5;
+  padding: 8px 20px;
+  font-weight: 600;
+  text-align: center !important;
+}
+.connect-btn:hover{
+  color: #1095F5 !important;
   background-color: transparent;
 }
 .section-heading {
@@ -123,6 +134,7 @@ nav .nav-link:hover {
 }
 .bnbBalance {
   color: white !important;
+  font-weight: 350 !important;
 }
 .dropdown-menu {
   background-color: #192070 !important;
@@ -133,7 +145,7 @@ nav .nav-link:hover {
   left: unset !important;
   font-weight: 450;
 }
-#connected .show .dropdown-arrow{
+#connected .show .dropdown-arrow {
   transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
 }
@@ -146,13 +158,19 @@ nav .nav-link:hover {
   height: 45px;
   width: 45px;
 }
-.dropdown-toggle::after{
+.dropdown-toggle::after {
   display: none;
+}
+.navbar .dropdown{
+  font-weight: 350 !important;
 }
 .dropdown-arrow {
   position: absolute;
   top: 28px;
   right: 39px;
+}
+.navbar .dropdown-menu{
+  font-weight: 350 !important;
 }
 /* Navbar ends here */
 
@@ -644,6 +662,17 @@ nav .nav-link:hover {
   color: #6aa7c6;
   margin-top: 10px;
 }
+.presale-status {
+  background-image: url("../img/profile/presale-status-bg.svg");
+  background-position: center;
+  color: #67eaf9;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 10px 7px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
 
 /*referral block*/
 .referral-block {
@@ -739,6 +768,109 @@ nav .nav-link:hover {
   color: #8c93b2;
 }
 /****profile page ends here****/
+
+/****detail modal starts here****/
+.profile-section .modal-dialog {
+  max-width: 80% !important;
+  margin: 0 auto;
+}
+.profile-section .modal-body {
+  padding: 0px !important;
+}
+.profile-section .modal-content {
+  background-color: transparent !important;
+}
+.profile-section .modal-content .close {
+  position: absolute;
+  top: 0px;
+  right: 9px;
+  z-index: 1000000;
+  color: white;
+  font-weight: 300;
+  font-size: 35px;
+}
+.detail-section {
+  padding-top: 3%;
+  padding-bottom: 3%;
+  height: auto;
+  margin: 6% auto;
+  width: 87%;
+}
+.detail-section-inner {
+  background-color: #082d91;
+}
+.twitter-icon {
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg)
+    brightness(102%) contrast(102%);
+}
+.twitter-btn {
+  border: 2px solid white;
+  padding: 5px 19px;
+  border-radius: 50px;
+  margin-left: 5px;
+}
+.copy-btn {
+  border: 2px solid white;
+  padding: 5px 9px;
+  border-radius: 50px;
+  margin-right: 5px;
+}
+.properties-block {
+  padding: 25px 43px;
+}
+.properties-card {
+  border: 2px solid #164f76;
+  text-align: center;
+  color: white;
+  padding: 16px 20px;
+}
+.percentage {
+  color: #99a0be;
+  font-size: 15px;
+}
+.detail-section-inner .left-border {
+  border-left: 2px solid #164f76;
+}
+.properties-heading {
+  color: #ffc378;
+  font-size: 15px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+.owner-details {
+  border-top: 2px solid #164f76;
+  border-bottom: 2px solid #164f76;
+  padding: 25px 43px 10px 43px;
+}
+.owner-detail-card {
+  border: 2px solid #164f76;
+  padding: 7px;
+  color: white;
+}
+.owner-txt {
+  color: #8f96b5;
+}
+.nft-details {
+  padding: 25px 43px;
+  color: white;
+}
+.detail-heading {
+  color: #ffc378;
+}
+.nft-price-btn {
+  color: white;
+  border: 1px solid #ff8437;
+  padding: 10px 42px;
+}
+.detail-note {
+  color: #b2ab8c;
+  font-size: 15px;
+  padding-top: 20px;
+}
+.modal-open .modal {
+  padding-left: 0px !important;
+}
+/****detail modal ends here****/
 
 /**** Media queries ****/
 
@@ -838,8 +970,15 @@ nav .nav-link:hover {
   .claim-btn-block {
     width: 65%;
   }
-  .dropdown-menu{
+  .dropdown-menu {
     top: 65px;
+  }
+  .profile-section .modal-dialog {
+    max-width: 95% !important;
+    margin: 0 auto !important;
+  }
+  .modal-open .modal {
+    padding-left: 0px !important;
   }
 }
 
@@ -1002,10 +1141,16 @@ nav .nav-link:hover {
     display: flex;
     justify-content: center;
   }
-  .dropdown-arrow{
+  .dropdown-arrow {
     right: 15px;
   }
-  .dropdown-menu{
+  .dropdown-menu {
     right: 0px !important;
+  }
+  .owner-details {
+    padding-top: 0px;
+  }
+  .owner-detail-card {
+    margin-top: 20px;
   }
 }
