feat: mint modal added (#28)
* feat: redirect to metamask added

* feat: minting modal added

* style: run format

* feat(minting): max nft btn added

* fix(metamask): open in new tab

* fix: bnb balance error fixed

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ h3 {
 .connect-btn-home {
   border: 1.5px solid #ffe1bc;
   background-color: #ff8437;
-  font-weight: 600;
+  font-weight: 350;
   text-align: center !important;
   padding: 8px 20px;
 }
@@ -48,14 +48,14 @@ h3 {
   color: white !important;
   background-color: transparent;
 }
-.connect-btn{
-  border: 1.5px solid #1095F5;
+.connect-btn {
+  border: 1.5px solid #1095f5;
   padding: 8px 20px;
-  font-weight: 600;
+  font-weight: 350;
   text-align: center !important;
 }
-.connect-btn:hover{
-  color: #1095F5 !important;
+.connect-btn:hover {
+  color: #1095f5 !important;
   background-color: transparent;
 }
 .section-heading {
@@ -161,7 +161,7 @@ nav .nav-link:hover {
 .dropdown-toggle::after {
   display: none;
 }
-.navbar .dropdown{
+.navbar .dropdown {
   font-weight: 350 !important;
 }
 .dropdown-arrow {
@@ -169,8 +169,11 @@ nav .nav-link:hover {
   top: 28px;
   right: 39px;
 }
-.navbar .dropdown-menu{
+.navbar .dropdown-menu {
   font-weight: 350 !important;
+}
+.navbar-expand-lg .navbar-nav .nav-link {
+  font-weight: 350;
 }
 /* Navbar ends here */
 
@@ -203,6 +206,60 @@ nav .nav-link:hover {
   color: #67eaf9;
   font-size: 14px;
   text-align: center;
+}
+.mint-modal .modal-content {
+  background: #082d91 !important;
+  padding: 35px;
+}
+.mint-modal-inner {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  color: white !important;
+  font-weight: 500;
+}
+.mint-modal-inner ::placeholder {
+  color: #67eaf9;
+}
+.start-minting-btn {
+  background: #ae5a25;
+  margin-top: 16px;
+  width: 100%;
+  height: 42px;
+  border: 2px solid #ff8437;
+  font-size: 14px;
+  color: white;
+}
+.hero-section .close {
+  color: #5e76b7;
+  position: absolute;
+  right: 13px;
+  top: 7px;
+  font-weight: 300;
+  font-size: 30px;
+}
+.minting-input {
+  background: #113996;
+  border: none;
+  height: 42px;
+  width: 100%;
+  color: #67eaf9;
+  padding-left: 10px;
+}
+.max-mint-btn {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  color: #ff8437 !important;
+  font-size: 14px;
+}
+.hero-section input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.hero-section input[type="number"] {
+  -moz-appearance: textfield;
 }
 /* hero section ends here */
 
@@ -980,6 +1037,15 @@ nav .nav-link:hover {
   .modal-open .modal {
     padding-left: 0px !important;
   }
+  .connect-btn-home {
+    float: right;
+  }
+  .connect-btn {
+    float: right;
+  }
+  .presale-status {
+    background-size: cover;
+  }
 }
 
 /* for mobile */
@@ -1152,5 +1218,11 @@ nav .nav-link:hover {
   }
   .owner-detail-card {
     margin-top: 20px;
+  }
+  .presale-status {
+    background-size: cover;
+  }
+  .mint-modal-inner {
+    width: 100%;
   }
 }
