feat: transaction modals & getCookie done (#33)
* feat: transaction modals & getCookie done

* fix: modal.js edited

* fix: modals.js code cleaned-up

* fix: getReferral call removed

* style: run format

--- a/css/style.css
+++ b/css/style.css
@@ -825,6 +825,126 @@ input::-webkit-inner-spin-button {
   color: #8c93b2;
 }
 
+/*transaction modal starts here*/
+.transaction-content {
+  background-color: #082d91;
+  padding: 30px;
+}
+.transaction-content .close {
+  color: white !important;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+.transaction-content p {
+  font-size: 25px;
+  color: white;
+}
+.explorer-btn {
+  padding: 10px 30px;
+  background-color: #ae5a25;
+  color: #0047ff;
+  font-size: 18px;
+  border: 1px solid #ff8437;
+}
+.explorer-btn:hover {
+  background: transparent;
+  color: #ffffff;
+}
+.squiggle {
+  stroke-dasharray: 450;
+  stroke-dashoffset: 450;
+  animation: draw 2s linear infinite alternate;
+}
+
+.cloud {
+  stroke-dasharray: 450;
+  stroke-dashoffset: 450;
+  animation: draw 2s linear infinite alternate;
+}
+
+.arrow {
+  stroke-dasharray: 450;
+  stroke-dashoffset: 450;
+  animation: draw 2s linear infinite alternate;
+}
+
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+.cls-1 {
+  fill: none;
+  stroke: #231f20;
+  stroke-miterlimit: 10;
+  stroke-width: 5px;
+}
+.circle-svg {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  width: 75px;
+  height: 75px;
+  display: block;
+}
+svg .cls-1 {
+  stroke: #ffffff;
+}
+.circle {
+  stroke-dasharray: 700;
+  stroke-dashoffset: 700;
+}
+.checkmark {
+  stroke-dasharray: 150;
+  stroke-dashoffset: 150;
+}
+.run-animation .circle {
+  -webkit-animation: 2.5s circleDraw forwards;
+  animation: 2.5s circleDraw forwards;
+}
+.run-animation .checkmark {
+  -webkit-animation: 0.75s checkmarkDraw forwards;
+  animation: 0.75s checkmarkDraw forwards;
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+}
+@-webkit-keyframes circleDraw {
+  from {
+    stroke-dashoffset: 700;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes circleDraw {
+  from {
+    stroke-dashoffset: 700;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@-webkit-keyframes checkmarkDraw {
+  from {
+    stroke-dashoffset: 150;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes checkmarkDraw {
+  from {
+    stroke-dashoffset: 150;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+/* transaction modal ends here */
+
 /****profile page ends here****/
 
 /****detail modal starts here****/
