--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,9 @@ input::-webkit-inner-spin-button {
   background-size: 125%;
   background-repeat: no-repeat;
 }
+.hover-magnify:hover {
+  transform: scale(1.1);
+}
 /*.footer-section::before {*/
 /*  content: "";*/
 /*  position: absolute;*/
