fix: connect wallet issues

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ h3 {
 .color-black {
   color: #0e0b4c !important;
 }
-.fw-400{
+.fw-400 {
   font-weight: 400;
 }
 /**** Global css ends here ****/
@@ -242,8 +242,8 @@ nav .nav-link:hover {
   font-weight: 300;
   font-size: 30px;
 }
-.punksSupply{
-  color: #00DDFF;
+.punksSupply {
+  color: #00ddff;
   font-weight: 500;
 }
 .minting-input {
@@ -1357,7 +1357,7 @@ svg .cls-1 {
   .mint-modal-inner {
     width: 100%;
   }
-  .hero-section .minting-block{
+  .hero-section .minting-block {
     margin-top: 0px;
     margin-left: 19px;
   }
